--- a/src/components/filter/FilterComponent.css
+++ b/src/components/filter/FilterComponent.css
@@ -1,6 +1,7 @@
 .wrap-filter {
   display: flex;
   justify-content: space-between;
+  padding: 20px 0px;
 }
 .wrap-filter__options {
   display: flex;
