--- a/src/components/card/CardItems.css
+++ b/src/components/card/CardItems.css
@@ -5,19 +5,25 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-bottom: 5%;
 }
 
 .card-item__img-pokemon {
   position: relative;
   width: 65%;
   height: 300px;
-  top: 1.5rem;
+  top: 5rem;
 }
 
 .card-item__details {
   background-color: #1f1d2b;
-  padding: 10px;
-  padding-top: 35px;
+  padding: 30px;
+  padding-top: 100px;
   width: 100%;
+  border-radius: 20px;
+}
+.card-item_btn-cart {
+  padding: 20px;
+  background-color: #312f3c;
   border-radius: 10px;
 }
