--- a/src/components/card/CardItems.css
+++ b/src/components/card/CardItems.css
@@ -8,22 +8,39 @@
   margin-bottom: 5%;
 }
 
-.card-item__img-pokemon {
+.card-item__wrap-img-pokemon {
   position: relative;
   width: 65%;
-  height: 300px;
-  top: 5rem;
+  /* height: 220px; */
+  top: 4rem;
+}
+.card-item__img-pokemon {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
 }
 
 .card-item__details {
   background-color: #1f1d2b;
-  padding: 30px;
-  padding-top: 100px;
+  padding: 15px;
+  padding-top: 80px;
   width: 100%;
   border-radius: 20px;
 }
+.card-item__details-name {
+  word-wrap: break-word;
+}
 .card-item_btn-cart {
-  padding: 20px;
+  padding: 13px;
   background-color: #312f3c;
   border-radius: 10px;
+}
+
+.card-item__details-price {
+  color: #abbbc2;
+}
+@media (max-width: 768px) {
+  .card-item__wrap-img-pokemon {
+    height: 310px;
+  }
 }
