--- a/src/components/filter/FilterComponent.css
+++ b/src/components/filter/FilterComponent.css
@@ -6,6 +6,14 @@
 .wrap-filter__options {
   display: flex;
 }
+.wrap-filter__select {
+  color: #fff;
+  padding: 8px;
+  background-color: #1f1d2b;
+  border-radius: 8px;
+  /* appearance: none;  */
+}
+
 @media (max-width: 768px) {
   .wrap-filter {
     flex-direction: column;
