--- a/src/components/layout/SideBar.css
+++ b/src/components/layout/SideBar.css
@@ -79,11 +79,12 @@
 }
 
 .sidebar__list-col2 {
-  width: 55%;
+  width: 50%;
 }
 
 .sidebar__list-col3 {
-  width: 20%;
+  width: 25%;
+  text-align: end;
 }
 
 .sidebar__list-cart {
