--- a/src/components/card/CartItems.css
+++ b/src/components/card/CartItems.css
@@ -35,6 +35,7 @@
   border-radius: 10px;
   background-color: #4c4f5a;
   text-align: center;
+  cursor: pointer;
 }
 .cart-item-btn-qty {
   padding: 15px;
@@ -51,4 +52,5 @@
   border-radius: 10px;
   background-color: #4c4f5a;
   text-align: center;
+  cursor: pointer;
 }
