--- a/src/components/layout/Header.css
+++ b/src/components/layout/Header.css
@@ -6,7 +6,10 @@
   align-items: center;
   padding: 20px 0px;
 }
-
+.header__title {
+  font-size: 26px;
+  font-weight: 600;
+}
 .header___action {
   display: flex;
   align-items: center;
@@ -17,14 +20,13 @@
   position: relative;
   display: flex;
   align-items: center;
-
   width: 100%;
 }
 
 .search-box {
-  min-width: 100px;
-  padding: 2px 10px 2px 30px;
-  border-radius: 8px;
+  width: 200px;
+  padding: 12px 12px 12px 30px;
+  border-radius: 12px;
   border-width: 1px;
   border-color: #abbbc2;
   background-color: #252836;
@@ -38,12 +40,14 @@
   height: 10px;
 }
 .header__cart {
-  width: 40px;
-  height: 40px;
+  width: 48px;
+  height: 48px;
+  cursor: pointer;
 }
 .icon-cart {
-  width: 40px;
-  height: 40px;
+  width: 48px;
+  height: 48px;
+  cursor: pointer;
 }
 
 @media (max-width: 768px) {
