--- a/src/components/filter/CustomDropdown.css
+++ b/src/components/filter/CustomDropdown.css
@@ -23,19 +23,20 @@
   z-index: 1000;
   max-height: 200px;
   overflow-y: auto;
+  scrollbar-width: none;
 }
 
 .custom-dropdown__option {
   padding: 8px;
-  border-bottom: 1px solid #333; /* Separator line */
+  border-bottom: 1px solid #333;
   color: #fff;
   cursor: pointer;
 }
 
 .custom-dropdown__option:hover {
-  background-color: #444; /* Change color on hover */
+  background-color: #2c2c3a;
 }
 
 .custom-dropdown__option:last-child {
-  border-bottom: none; /* Remove bottom border from the last option */
+  border-bottom: none;
 }
