--- a/src/components/card/CartItems.css
+++ b/src/components/card/CartItems.css
@@ -1,5 +1,5 @@
 .wrap-cart-item {
-  margin-bottom: 10px;
+  margin-bottom: 20px;
 }
 .cart-item__details {
   width: 100%;
@@ -59,4 +59,8 @@
 }
 .cart-item-btn-plus:hover {
   background-color: #4c4f5a;
+}
+.cart-item__price {
+  font-size: 12px;
+  color: #abbbc2;
 }
